src/App.css
html,
body,
#root {
  height: 100%;
  margin: 0;
}

#root {
  display: flex;
}

.App {
  color: #222;
  padding-bottom: 30px;
  box-sizing: border-box;
  display: flex;
  flex: 1;
  flex-direction: column;
}

.App-edit-cards {
  display: block;
}

.App-viewer {
  perspective: 1400px;
}

.App-home {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

.App-home > div {
  margin: 0 4px 0;
  text-align: center;
}

.title {
  color: #333;
  text-align: center;
}

.card-button {
  border-radius: 10px;
  background: url(./city.jpg) top left no-repeat;
  background-size: cover;
  width: 145px;
  height: 180px;
  color: white;
  font-weight: 800;
  font-size: 26px;
  text-align: center;
  padding: 70px 20px 0;
  box-sizing: border-box;
  cursor: pointer;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18);
}

.card-button-road {
  background: url(./road.jpg) top left no-repeat;
  background-size: cover;
}

.button {
  margin: 10px 20px 0;
  background: #333;
  color: #fff;
  border-radius: 8px;
  height: 50px;
  line-height: 50px;
  text-align: center;
  cursor: pointer;
  font-weight: bold;
}

.button-secondary {
  background: none;
  color: #999;
  font-weight: normal;
  margin: 0;
  line-height: 50px;
  height: 50px;
}

.button-outline {
  background: none;
  color: #999;
  font-weight: normal;
  line-height: 42px;
  height: 42px;
}

.button-floating {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  margin: 0;
  border-radius: 0;
  height: 60px;
  line-height: 60px;
}

.card {
  border-radius: 14px;
  position: relative;
  transition: transform 0.7s;
  transform-style: preserve-3d;
  width: 300px;
  height: 450px;
  margin: 12px auto 22px;
  cursor: pointer;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18);
}

.card:focus {
  transform: rotateY(180deg);
  outline: none;
}

.card-front,
.card-back {
  width: 300px;
  display: block;
  position: absolute;
  backface-visibility: hidden;
  border-radius: 14px;
}

.card-back {
  transform: rotateY(180deg);
  outline: none;
}

.event-listitem {
  height: 60px;
  display: flex;
  align-items: center;
  padding: 0 18px;
}

.event-listitem:nth-child(odd) {
  background: #f8f8f8;
}

.event-listitem input {
  margin-right: 16px;
}

.button-icon {
  position: relative;
  top: 4px;
  margin-right: 4px;
}

.dropdown-wrapper {
  margin: 24px 20px 0;
  display: block;
  user-select: none;
  position: relative;
}

.dropdown-wrapper::after {
  content: '';
  position: absolute;
  top: 50%;
  right: 18px;
  box-sizing: border-box;
  height: 7px;
  width: 7px;
  border-style: solid;
  border-color: #111;
  border-width: 0 1px 1px 0;
  transform: translateY(-60%) rotate(45deg);
}

.dropdown {
  -moz-appearance: none;
  -webkit-appearance: none;
  display: block;
  width: 100%;
  height: 48px;
  background: #f6f6f6;
  box-shadow: inset 0 3px 10px rgba(0, 0, 0, 0.05);
  border: none;
  border-radius: 6px;
  font-size: 16px;
  font-weight: bold;
  text-indent: 16px;
  color: #222;
  cursor: pointer;
}

.dropdown:hover {
  background: #efefef;
}

.dropdown:focus {
  border: solid 1px #ccc;
  outline: none;
}

